--- a/src/assets/publicCss.css
+++ b/src/assets/publicCss.css
@@ -23,9 +23,10 @@
 .code {
     border: 1px solid #c0c4cc;
     border-radius: 5px;
-    width: 700px;
+    width: 90%;
     padding: 10px 20px;
     line-height: 20px;
+    overflow-x: auto;
 }
 
 /* 表格 */
